trad3.output
Grammar

    0 $accept: axioma_programa $end

    1 $@1: ε

    2 axioma_programa: dec_variables $@1 dec_funciones

    3 dec_variables: ε
    4              | INTEGER var_list ';' dec_variables

    5 var_list: var_decl
    6         | var_decl ',' var_list

    7 var_decl: IDENTIF
    8         | IDENTIF '[' NUMBER ']'
    9         | IDENTIF '=' expresion

   10 $@2: ε

   11 dec_funciones: funciones MAIN '(' argumentos ')' '{' $@2 axioma_codigo '}'

   12 funciones: ε
   13          | funcion funciones

   14 $@3: ε

   15 funcion: IDENTIF '(' argumentos ')' '{' $@3 axioma_codigo '}'

   16 argumentos: ε
   17           | INTEGER IDENTIF r_argumentos

   18 r_argumentos: ε
   19             | ',' INTEGER IDENTIF r_argumentos

   20 procedimiento: IDENTIF '(' proc_argumentos ')'

   21 proc_argumentos: ε
   22                | expresion proc_r_argumentos

   23 proc_r_argumentos: ε
   24                  | ',' expresion proc_r_argumentos

   25 axioma_codigo: ε
   26              | sentencia axioma_codigo

   27 sentencia: IDENTIF '=' expresion ';'
   28          | IDENTIF '[' expresion ']' '=' expresion ';'
   29          | INTEGER var_list_local ';'
   30          | PUTS '(' STRING ')' ';'
   31          | PRINTF '(' STRING ',' elems ')' ';'
   32          | WHILE '(' expresion ')' '{' axioma_codigo '}'
   33          | IF '(' expresion ')' '{' axioma_codigo '}'
   34          | IF '(' expresion ')' '{' axioma_codigo '}' ELSE '{' axioma_codigo '}'
   35          | FOR '(' inicializacion ';' expresion ';' inc_dec ')' '{' axioma_codigo '}'
   36          | procedimiento ';'
   37          | RETURN expresion ';'

   38 var_list_local: var_decl_local
   39               | var_decl_local ',' var_list_local

   40 var_decl_local: IDENTIF
   41               | IDENTIF '[' NUMBER ']'
   42               | IDENTIF '=' expresion

   43 inicializacion: IDENTIF '=' NUMBER

   44 inc_dec: IDENTIF '=' IDENTIF inc_dec_operadores NUMBER

   45 inc_dec_operadores: '+'
   46                   | '-'
   47                   | '*'
   48                   | '/'
   49                   | '%'

   50 elems: elem r_elems

   51 r_elems: ε
   52        | ',' elem r_elems

   53 elem: expresion
   54     | STRING

   55 expresion: termino
   56          | expresion '+' expresion
   57          | expresion '-' expresion
   58          | expresion '*' expresion
   59          | expresion '/' expresion
   60          | expresion '%' expresion
   61          | expresion AND expresion
   62          | expresion OR expresion
   63          | expresion NEQ expresion
   64          | expresion EQ expresion
   65          | expresion '<' expresion
   66          | expresion LE expresion
   67          | expresion '>' expresion
   68          | expresion GE expresion
   69          | '!' expresion

   70 termino: operando
   71        | '+' operando
   72        | '-' operando

   73 operando: IDENTIF
   74         | NUMBER
   75         | IDENTIF '[' expresion ']'
   76         | procedimiento
   77         | '(' expresion ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 69
    '%' (37) 49 60
    '(' (40) 11 15 20 30 31 32 33 34 35 77
    ')' (41) 11 15 20 30 31 32 33 34 35 77
    '*' (42) 47 58
    '+' (43) 45 56 71
    ',' (44) 6 19 24 31 39 52
    '-' (45) 46 57 72
    '/' (47) 48 59
    ';' (59) 4 27 28 29 30 31 35 36 37
    '<' (60) 65
    '=' (61) 9 27 28 42 43 44
    '>' (62) 67
    '[' (91) 8 28 41 75
    ']' (93) 8 28 41 75
    '{' (123) 11 15 32 33 34 35
    '}' (125) 11 15 32 33 34 35
    error (256)
    NUMBER (258) 8 41 43 44 74
    IDENTIF (259) 7 8 9 15 17 19 20 27 28 40 41 42 43 44 73 75
    INTEGER (260) 4 17 19 29
    STRING (261) 30 31 54
    MAIN (262) 11
    WHILE (263) 32
    PUTS (264) 30
    PRINTF (265) 31
    AND (266) 61
    OR (267) 62
    EQ (268) 64
    NEQ (269) 63
    LE (270) 66
    GE (271) 68
    IF (272) 33 34
    ELSE (273) 34
    FOR (274) 35
    RETURN (275) 37
    UNARY_SIGN (276)


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    axioma_programa (40)
        on left: 2
        on right: 0
    $@1 (41)
        on left: 1
        on right: 2
    dec_variables (42)
        on left: 3 4
        on right: 2 4
    var_list (43)
        on left: 5 6
        on right: 4 6
    var_decl (44)
        on left: 7 8 9
        on right: 5 6
    dec_funciones (45)
        on left: 11
        on right: 2
    $@2 (46)
        on left: 10
        on right: 11
    funciones (47)
        on left: 12 13
        on right: 11 13
    funcion (48)
        on left: 15
        on right: 13
    $@3 (49)
        on left: 14
        on right: 15
    argumentos (50)
        on left: 16 17
        on right: 11 15
    r_argumentos (51)
        on left: 18 19
        on right: 17 19
    procedimiento (52)
        on left: 20
        on right: 36 76
    proc_argumentos (53)
        on left: 21 22
        on right: 20
    proc_r_argumentos (54)
        on left: 23 24
        on right: 22 24
    axioma_codigo (55)
        on left: 25 26
        on right: 11 15 26 32 33 34 35
    sentencia (56)
        on left: 27 28 29 30 31 32 33 34 35 36 37
        on right: 26
    var_list_local (57)
        on left: 38 39
        on right: 29 39
    var_decl_local (58)
        on left: 40 41 42
        on right: 38 39
    inicializacion (59)
        on left: 43
        on right: 35
    inc_dec (60)
        on left: 44
        on right: 35
    inc_dec_operadores (61)
        on left: 45 46 47 48 49
        on right: 44
    elems (62)
        on left: 50
        on right: 31
    r_elems (63)
        on left: 51 52
        on right: 50 52
    elem (64)
        on left: 53 54
        on right: 50 52
    expresion (65)
        on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
        on right: 9 22 24 27 28 32 33 34 35 37 42 53 56 57 58 59 60 61 62 63 64 65 66 67 68 69 75 77
    termino (66)
        on left: 70 71 72
        on right: 55
    operando (67)
        on left: 73 74 75 76 77
        on right: 70 71 72


State 0

    0 $accept: • axioma_programa $end

    INTEGER  shift, and go to state 1

    $default  reduce using rule 3 (dec_variables)

    axioma_programa  go to state 2
    dec_variables    go to state 3


State 1

    4 dec_variables: INTEGER • var_list ';' dec_variables

    IDENTIF  shift, and go to state 4

    var_list  go to state 5
    var_decl  go to state 6


State 2

    0 $accept: axioma_programa • $end

    $end  shift, and go to state 7


State 3

    2 axioma_programa: dec_variables • $@1 dec_funciones

    $default  reduce using rule 1 ($@1)

    $@1  go to state 8


State 4

    7 var_decl: IDENTIF •
    8         | IDENTIF • '[' NUMBER ']'
    9         | IDENTIF • '=' expresion

    '='  shift, and go to state 9
    '['  shift, and go to state 10

    $default  reduce using rule 7 (var_decl)


State 5

    4 dec_variables: INTEGER var_list • ';' dec_variables

    ';'  shift, and go to state 11


State 6

    5 var_list: var_decl •
    6         | var_decl • ',' var_list

    ','  shift, and go to state 12

    $default  reduce using rule 5 (var_list)


State 7

    0 $accept: axioma_programa $end •

    $default  accept


State 8

    2 axioma_programa: dec_variables $@1 • dec_funciones

    IDENTIF  shift, and go to state 13

    $default  reduce using rule 12 (funciones)

    dec_funciones  go to state 14
    funciones      go to state 15
    funcion        go to state 16


State 9

    9 var_decl: IDENTIF '=' • expresion

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    procedimiento  go to state 23
    expresion      go to state 24
    termino        go to state 25
    operando       go to state 26


State 10

    8 var_decl: IDENTIF '[' • NUMBER ']'

    NUMBER  shift, and go to state 27


State 11

    4 dec_variables: INTEGER var_list ';' • dec_variables

    INTEGER  shift, and go to state 1

    $default  reduce using rule 3 (dec_variables)

    dec_variables  go to state 28


State 12

    6 var_list: var_decl ',' • var_list

    IDENTIF  shift, and go to state 4

    var_list  go to state 29
    var_decl  go to state 6


State 13

   15 funcion: IDENTIF • '(' argumentos ')' '{' $@3 axioma_codigo '}'

    '('  shift, and go to state 30


State 14

    2 axioma_programa: dec_variables $@1 dec_funciones •

    $default  reduce using rule 2 (axioma_programa)


State 15

   11 dec_funciones: funciones • MAIN '(' argumentos ')' '{' $@2 axioma_codigo '}'

    MAIN  shift, and go to state 31


State 16

   13 funciones: funcion • funciones

    IDENTIF  shift, and go to state 13

    $default  reduce using rule 12 (funciones)

    funciones  go to state 32
    funcion    go to state 16


State 17

   74 operando: NUMBER •

    $default  reduce using rule 74 (operando)


State 18

   20 procedimiento: IDENTIF • '(' proc_argumentos ')'
   73 operando: IDENTIF •
   75         | IDENTIF • '[' expresion ']'

    '['  shift, and go to state 33
    '('  shift, and go to state 34

    $default  reduce using rule 73 (operando)


State 19

   71 termino: '+' • operando

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '('      shift, and go to state 22

    procedimiento  go to state 23
    operando       go to state 35


State 20

   72 termino: '-' • operando

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '('      shift, and go to state 22

    procedimiento  go to state 23
    operando       go to state 36


State 21

   69 expresion: '!' • expresion

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    procedimiento  go to state 23
    expresion      go to state 37
    termino        go to state 25
    operando       go to state 26


State 22

   77 operando: '(' • expresion ')'

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    procedimiento  go to state 23
    expresion      go to state 38
    termino        go to state 25
    operando       go to state 26


State 23

   76 operando: procedimiento •

    $default  reduce using rule 76 (operando)


State 24

    9 var_decl: IDENTIF '=' expresion •
   56 expresion: expresion • '+' expresion
   57          | expresion • '-' expresion
   58          | expresion • '*' expresion
   59          | expresion • '/' expresion
   60          | expresion • '%' expresion
   61          | expresion • AND expresion
   62          | expresion • OR expresion
   63          | expresion • NEQ expresion
   64          | expresion • EQ expresion
   65          | expresion • '<' expresion
   66          | expresion • LE expresion
   67          | expresion • '>' expresion
   68          | expresion • GE expresion

    AND  shift, and go to state 39
    OR   shift, and go to state 40
    EQ   shift, and go to state 41
    NEQ  shift, and go to state 42
    LE   shift, and go to state 43
    GE   shift, and go to state 44
    '<'  shift, and go to state 45
    '>'  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51

    $default  reduce using rule 9 (var_decl)


State 25

   55 expresion: termino •

    $default  reduce using rule 55 (expresion)


State 26

   70 termino: operando •

    $default  reduce using rule 70 (termino)


State 27

    8 var_decl: IDENTIF '[' NUMBER • ']'

    ']'  shift, and go to state 52


State 28

    4 dec_variables: INTEGER var_list ';' dec_variables •

    $default  reduce using rule 4 (dec_variables)


State 29

    6 var_list: var_decl ',' var_list •

    $default  reduce using rule 6 (var_list)


State 30

   15 funcion: IDENTIF '(' • argumentos ')' '{' $@3 axioma_codigo '}'

    INTEGER  shift, and go to state 53

    $default  reduce using rule 16 (argumentos)

    argumentos  go to state 54


State 31

   11 dec_funciones: funciones MAIN • '(' argumentos ')' '{' $@2 axioma_codigo '}'

    '('  shift, and go to state 55


State 32

   13 funciones: funcion funciones •

    $default  reduce using rule 13 (funciones)


State 33

   75 operando: IDENTIF '[' • expresion ']'

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    procedimiento  go to state 23
    expresion      go to state 56
    termino        go to state 25
    operando       go to state 26


State 34

   20 procedimiento: IDENTIF '(' • proc_argumentos ')'

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    $default  reduce using rule 21 (proc_argumentos)

    procedimiento    go to state 23
    proc_argumentos  go to state 57
    expresion        go to state 58
    termino          go to state 25
    operando         go to state 26


State 35

   71 termino: '+' operando •

    $default  reduce using rule 71 (termino)


State 36

   72 termino: '-' operando •

    $default  reduce using rule 72 (termino)


State 37

   56 expresion: expresion • '+' expresion
   57          | expresion • '-' expresion
   58          | expresion • '*' expresion
   59          | expresion • '/' expresion
   60          | expresion • '%' expresion
   61          | expresion • AND expresion
   62          | expresion • OR expresion
   63          | expresion • NEQ expresion
   64          | expresion • EQ expresion
   65          | expresion • '<' expresion
   66          | expresion • LE expresion
   67          | expresion • '>' expresion
   68          | expresion • GE expresion
   69          | '!' expresion •

    $default  reduce using rule 69 (expresion)


State 38

   56 expresion: expresion • '+' expresion
   57          | expresion • '-' expresion
   58          | expresion • '*' expresion
   59          | expresion • '/' expresion
   60          | expresion • '%' expresion
   61          | expresion • AND expresion
   62          | expresion • OR expresion
   63          | expresion • NEQ expresion
   64          | expresion • EQ expresion
   65          | expresion • '<' expresion
   66          | expresion • LE expresion
   67          | expresion • '>' expresion
   68          | expresion • GE expresion
   77 operando: '(' expresion • ')'

    AND  shift, and go to state 39
    OR   shift, and go to state 40
    EQ   shift, and go to state 41
    NEQ  shift, and go to state 42
    LE   shift, and go to state 43
    GE   shift, and go to state 44
    '<'  shift, and go to state 45
    '>'  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51
    ')'  shift, and go to state 59


State 39

   61 expresion: expresion AND • expresion

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    procedimiento  go to state 23
    expresion      go to state 60
    termino        go to state 25
    operando       go to state 26


State 40

   62 expresion: expresion OR • expresion

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    procedimiento  go to state 23
    expresion      go to state 61
    termino        go to state 25
    operando       go to state 26


State 41

   64 expresion: expresion EQ • expresion

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    procedimiento  go to state 23
    expresion      go to state 62
    termino        go to state 25
    operando       go to state 26


State 42

   63 expresion: expresion NEQ • expresion

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    procedimiento  go to state 23
    expresion      go to state 63
    termino        go to state 25
    operando       go to state 26


State 43

   66 expresion: expresion LE • expresion

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    procedimiento  go to state 23
    expresion      go to state 64
    termino        go to state 25
    operando       go to state 26


State 44

   68 expresion: expresion GE • expresion

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    procedimiento  go to state 23
    expresion      go to state 65
    termino        go to state 25
    operando       go to state 26


State 45

   65 expresion: expresion '<' • expresion

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    procedimiento  go to state 23
    expresion      go to state 66
    termino        go to state 25
    operando       go to state 26


State 46

   67 expresion: expresion '>' • expresion

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    procedimiento  go to state 23
    expresion      go to state 67
    termino        go to state 25
    operando       go to state 26


State 47

   56 expresion: expresion '+' • expresion

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    procedimiento  go to state 23
    expresion      go to state 68
    termino        go to state 25
    operando       go to state 26


State 48

   57 expresion: expresion '-' • expresion

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    procedimiento  go to state 23
    expresion      go to state 69
    termino        go to state 25
    operando       go to state 26


State 49

   58 expresion: expresion '*' • expresion

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    procedimiento  go to state 23
    expresion      go to state 70
    termino        go to state 25
    operando       go to state 26


State 50

   59 expresion: expresion '/' • expresion

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    procedimiento  go to state 23
    expresion      go to state 71
    termino        go to state 25
    operando       go to state 26


State 51

   60 expresion: expresion '%' • expresion

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    procedimiento  go to state 23
    expresion      go to state 72
    termino        go to state 25
    operando       go to state 26


State 52

    8 var_decl: IDENTIF '[' NUMBER ']' •

    $default  reduce using rule 8 (var_decl)


State 53

   17 argumentos: INTEGER • IDENTIF r_argumentos

    IDENTIF  shift, and go to state 73


State 54

   15 funcion: IDENTIF '(' argumentos • ')' '{' $@3 axioma_codigo '}'

    ')'  shift, and go to state 74


State 55

   11 dec_funciones: funciones MAIN '(' • argumentos ')' '{' $@2 axioma_codigo '}'

    INTEGER  shift, and go to state 53

    $default  reduce using rule 16 (argumentos)

    argumentos  go to state 75


State 56

   56 expresion: expresion • '+' expresion
   57          | expresion • '-' expresion
   58          | expresion • '*' expresion
   59          | expresion • '/' expresion
   60          | expresion • '%' expresion
   61          | expresion • AND expresion
   62          | expresion • OR expresion
   63          | expresion • NEQ expresion
   64          | expresion • EQ expresion
   65          | expresion • '<' expresion
   66          | expresion • LE expresion
   67          | expresion • '>' expresion
   68          | expresion • GE expresion
   75 operando: IDENTIF '[' expresion • ']'

    AND  shift, and go to state 39
    OR   shift, and go to state 40
    EQ   shift, and go to state 41
    NEQ  shift, and go to state 42
    LE   shift, and go to state 43
    GE   shift, and go to state 44
    '<'  shift, and go to state 45
    '>'  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51
    ']'  shift, and go to state 76


State 57

   20 procedimiento: IDENTIF '(' proc_argumentos • ')'

    ')'  shift, and go to state 77


State 58

   22 proc_argumentos: expresion • proc_r_argumentos
   56 expresion: expresion • '+' expresion
   57          | expresion • '-' expresion
   58          | expresion • '*' expresion
   59          | expresion • '/' expresion
   60          | expresion • '%' expresion
   61          | expresion • AND expresion
   62          | expresion • OR expresion
   63          | expresion • NEQ expresion
   64          | expresion • EQ expresion
   65          | expresion • '<' expresion
   66          | expresion • LE expresion
   67          | expresion • '>' expresion
   68          | expresion • GE expresion

    AND  shift, and go to state 39
    OR   shift, and go to state 40
    EQ   shift, and go to state 41
    NEQ  shift, and go to state 42
    LE   shift, and go to state 43
    GE   shift, and go to state 44
    '<'  shift, and go to state 45
    '>'  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51
    ','  shift, and go to state 78

    $default  reduce using rule 23 (proc_r_argumentos)

    proc_r_argumentos  go to state 79


State 59

   77 operando: '(' expresion ')' •

    $default  reduce using rule 77 (operando)


State 60

   56 expresion: expresion • '+' expresion
   57          | expresion • '-' expresion
   58          | expresion • '*' expresion
   59          | expresion • '/' expresion
   60          | expresion • '%' expresion
   61          | expresion • AND expresion
   61          | expresion AND expresion •
   62          | expresion • OR expresion
   63          | expresion • NEQ expresion
   64          | expresion • EQ expresion
   65          | expresion • '<' expresion
   66          | expresion • LE expresion
   67          | expresion • '>' expresion
   68          | expresion • GE expresion

    EQ   shift, and go to state 41
    NEQ  shift, and go to state 42
    LE   shift, and go to state 43
    GE   shift, and go to state 44
    '<'  shift, and go to state 45
    '>'  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51

    $default  reduce using rule 61 (expresion)


State 61

   56 expresion: expresion • '+' expresion
   57          | expresion • '-' expresion
   58          | expresion • '*' expresion
   59          | expresion • '/' expresion
   60          | expresion • '%' expresion
   61          | expresion • AND expresion
   62          | expresion • OR expresion
   62          | expresion OR expresion •
   63          | expresion • NEQ expresion
   64          | expresion • EQ expresion
   65          | expresion • '<' expresion
   66          | expresion • LE expresion
   67          | expresion • '>' expresion
   68          | expresion • GE expresion

    AND  shift, and go to state 39
    EQ   shift, and go to state 41
    NEQ  shift, and go to state 42
    LE   shift, and go to state 43
    GE   shift, and go to state 44
    '<'  shift, and go to state 45
    '>'  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51

    $default  reduce using rule 62 (expresion)


State 62

   56 expresion: expresion • '+' expresion
   57          | expresion • '-' expresion
   58          | expresion • '*' expresion
   59          | expresion • '/' expresion
   60          | expresion • '%' expresion
   61          | expresion • AND expresion
   62          | expresion • OR expresion
   63          | expresion • NEQ expresion
   64          | expresion • EQ expresion
   64          | expresion EQ expresion •
   65          | expresion • '<' expresion
   66          | expresion • LE expresion
   67          | expresion • '>' expresion
   68          | expresion • GE expresion

    LE   shift, and go to state 43
    GE   shift, and go to state 44
    '<'  shift, and go to state 45
    '>'  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51

    $default  reduce using rule 64 (expresion)


State 63

   56 expresion: expresion • '+' expresion
   57          | expresion • '-' expresion
   58          | expresion • '*' expresion
   59          | expresion • '/' expresion
   60          | expresion • '%' expresion
   61          | expresion • AND expresion
   62          | expresion • OR expresion
   63          | expresion • NEQ expresion
   63          | expresion NEQ expresion •
   64          | expresion • EQ expresion
   65          | expresion • '<' expresion
   66          | expresion • LE expresion
   67          | expresion • '>' expresion
   68          | expresion • GE expresion

    LE   shift, and go to state 43
    GE   shift, and go to state 44
    '<'  shift, and go to state 45
    '>'  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51

    $default  reduce using rule 63 (expresion)


State 64

   56 expresion: expresion • '+' expresion
   57          | expresion • '-' expresion
   58          | expresion • '*' expresion
   59          | expresion • '/' expresion
   60          | expresion • '%' expresion
   61          | expresion • AND expresion
   62          | expresion • OR expresion
   63          | expresion • NEQ expresion
   64          | expresion • EQ expresion
   65          | expresion • '<' expresion
   66          | expresion • LE expresion
   66          | expresion LE expresion •
   67          | expresion • '>' expresion
   68          | expresion • GE expresion

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51

    $default  reduce using rule 66 (expresion)


State 65

   56 expresion: expresion • '+' expresion
   57          | expresion • '-' expresion
   58          | expresion • '*' expresion
   59          | expresion • '/' expresion
   60          | expresion • '%' expresion
   61          | expresion • AND expresion
   62          | expresion • OR expresion
   63          | expresion • NEQ expresion
   64          | expresion • EQ expresion
   65          | expresion • '<' expresion
   66          | expresion • LE expresion
   67          | expresion • '>' expresion
   68          | expresion • GE expresion
   68          | expresion GE expresion •

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51

    $default  reduce using rule 68 (expresion)


State 66

   56 expresion: expresion • '+' expresion
   57          | expresion • '-' expresion
   58          | expresion • '*' expresion
   59          | expresion • '/' expresion
   60          | expresion • '%' expresion
   61          | expresion • AND expresion
   62          | expresion • OR expresion
   63          | expresion • NEQ expresion
   64          | expresion • EQ expresion
   65          | expresion • '<' expresion
   65          | expresion '<' expresion •
   66          | expresion • LE expresion
   67          | expresion • '>' expresion
   68          | expresion • GE expresion

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51

    $default  reduce using rule 65 (expresion)


State 67

   56 expresion: expresion • '+' expresion
   57          | expresion • '-' expresion
   58          | expresion • '*' expresion
   59          | expresion • '/' expresion
   60          | expresion • '%' expresion
   61          | expresion • AND expresion
   62          | expresion • OR expresion
   63          | expresion • NEQ expresion
   64          | expresion • EQ expresion
   65          | expresion • '<' expresion
   66          | expresion • LE expresion
   67          | expresion • '>' expresion
   67          | expresion '>' expresion •
   68          | expresion • GE expresion

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51

    $default  reduce using rule 67 (expresion)


State 68

   56 expresion: expresion • '+' expresion
   56          | expresion '+' expresion •
   57          | expresion • '-' expresion
   58          | expresion • '*' expresion
   59          | expresion • '/' expresion
   60          | expresion • '%' expresion
   61          | expresion • AND expresion
   62          | expresion • OR expresion
   63          | expresion • NEQ expresion
   64          | expresion • EQ expresion
   65          | expresion • '<' expresion
   66          | expresion • LE expresion
   67          | expresion • '>' expresion
   68          | expresion • GE expresion

    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51

    $default  reduce using rule 56 (expresion)


State 69

   56 expresion: expresion • '+' expresion
   57          | expresion • '-' expresion
   57          | expresion '-' expresion •
   58          | expresion • '*' expresion
   59          | expresion • '/' expresion
   60          | expresion • '%' expresion
   61          | expresion • AND expresion
   62          | expresion • OR expresion
   63          | expresion • NEQ expresion
   64          | expresion • EQ expresion
   65          | expresion • '<' expresion
   66          | expresion • LE expresion
   67          | expresion • '>' expresion
   68          | expresion • GE expresion

    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51

    $default  reduce using rule 57 (expresion)


State 70

   56 expresion: expresion • '+' expresion
   57          | expresion • '-' expresion
   58          | expresion • '*' expresion
   58          | expresion '*' expresion •
   59          | expresion • '/' expresion
   60          | expresion • '%' expresion
   61          | expresion • AND expresion
   62          | expresion • OR expresion
   63          | expresion • NEQ expresion
   64          | expresion • EQ expresion
   65          | expresion • '<' expresion
   66          | expresion • LE expresion
   67          | expresion • '>' expresion
   68          | expresion • GE expresion

    $default  reduce using rule 58 (expresion)


State 71

   56 expresion: expresion • '+' expresion
   57          | expresion • '-' expresion
   58          | expresion • '*' expresion
   59          | expresion • '/' expresion
   59          | expresion '/' expresion •
   60          | expresion • '%' expresion
   61          | expresion • AND expresion
   62          | expresion • OR expresion
   63          | expresion • NEQ expresion
   64          | expresion • EQ expresion
   65          | expresion • '<' expresion
   66          | expresion • LE expresion
   67          | expresion • '>' expresion
   68          | expresion • GE expresion

    $default  reduce using rule 59 (expresion)


State 72

   56 expresion: expresion • '+' expresion
   57          | expresion • '-' expresion
   58          | expresion • '*' expresion
   59          | expresion • '/' expresion
   60          | expresion • '%' expresion
   60          | expresion '%' expresion •
   61          | expresion • AND expresion
   62          | expresion • OR expresion
   63          | expresion • NEQ expresion
   64          | expresion • EQ expresion
   65          | expresion • '<' expresion
   66          | expresion • LE expresion
   67          | expresion • '>' expresion
   68          | expresion • GE expresion

    $default  reduce using rule 60 (expresion)


State 73

   17 argumentos: INTEGER IDENTIF • r_argumentos

    ','  shift, and go to state 80

    $default  reduce using rule 18 (r_argumentos)

    r_argumentos  go to state 81


State 74

   15 funcion: IDENTIF '(' argumentos ')' • '{' $@3 axioma_codigo '}'

    '{'  shift, and go to state 82


State 75

   11 dec_funciones: funciones MAIN '(' argumentos • ')' '{' $@2 axioma_codigo '}'

    ')'  shift, and go to state 83


State 76

   75 operando: IDENTIF '[' expresion ']' •

    $default  reduce using rule 75 (operando)


State 77

   20 procedimiento: IDENTIF '(' proc_argumentos ')' •

    $default  reduce using rule 20 (procedimiento)


State 78

   24 proc_r_argumentos: ',' • expresion proc_r_argumentos

    NUMBER   shift, and go to state 17
    IDENTIF  shift, and go to state 18
    '+'      shift, and go to state 19
    '-'      shift, and go to state 20
    '!'      shift, and go to state 21
    '('      shift, and go to state 22

    procedimiento  go to state 23
    expresion      go to state 84
    termino        go to state 25
    operando       go to state 26


State 79

   22 proc_argumentos: expresion proc_r_argumentos •
